fix footer on mobile (legacy pages)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -5990,8 +5990,15 @@ body {
   justify-self: flex-end;
   justify-content: flex-start;
   align-items: center;
-  height: 50px;
+  padding: 15px 0;
   background-color: #00181A; }
+
+@media (max-width: 767px) {
+  .footer .col-sm-4,
+  .footer .container {
+    text-align: center;
+  }
+}
 
 .footer > .container {
   padding-right: 15px;
